testes httpclient / ajustes organizaçao
