# docs/swagger.json
@@ -11,6 +11,32 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/": {
+            "get": {
+                "description": "Retorna links para os controllers",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Raiz"
+                ],
+                "summary": "Raiz",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/planetas": {
             "get": {
                 "description": "Busca paginada de planetas",
@@ -86,7 +112,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.InsertResult"
+                            "$ref": "#/definitions/models.ResultadoInsert"
                         }
                     },
                     "400": {
@@ -169,8 +195,8 @@
                             "type": "string"
                         }
                     },
-                    "404": {
-                        "description": "Not found",
+                    "400": {
+                        "description": "Bad request",
                         "schema": {
                             "type": "string"
                         }
@@ -180,14 +206,6 @@
         }
     },
     "definitions": {
-        "models.InsertResult": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                }
-            }
-        },
         "models.PaginaResultado": {
             "type": "object",
             "properties": {
@@ -204,9 +222,17 @@
         },
         "models.Planeta": {
             "type": "object",
+            "required": [
+                "clima",
+                "nome",
+                "terreno"
+            ],
             "properties": {
                 "_id": {
                     "type": "string"
+                },
+                "aparicoes_em_filmes": {
+                    "type": "integer"
                 },
                 "atualizado_em": {
                     "type": "string"
@@ -227,7 +253,15 @@
         },
         "models.PlanetaInput": {
             "type": "object",
+            "required": [
+                "clima",
+                "nome",
+                "terreno"
+            ],
             "properties": {
+                "aparicoes_em_filmes": {
+                    "type": "integer"
+                },
                 "clima": {
                     "type": "string"
                 },
@@ -235,6 +269,14 @@
                     "type": "string"
                 },
                 "terreno": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.ResultadoInsert": {
+            "type": "object",
+            "properties": {
+                "id": {
                     "type": "string"
                 }
             }
