# main.go
@@ -2,10 +2,20 @@ package main
 
 import (
 	"flag"
+	"fmt"
 	"os"
 
+	"github.com/gin-contrib/cors"
+	"github.com/gin-contrib/logger"
+	"github.com/gin-contrib/pprof"
+	"github.com/gin-gonic/gin"
+	"github.com/rs/zerolog"
+	"github.com/rs/zerolog/log"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 	"github.com/thalysonr/planet-api/controllers"
-	"github.com/thalysonr/planet-api/mappings"
+	_ "github.com/thalysonr/planet-api/docs" //swagger docs
+	"github.com/thalysonr/planet-api/httpclient"
 	"github.com/thalysonr/planet-api/models"
 )
 
@@ -20,12 +30,12 @@ func main() {
 	flag.StringVar(&config.MongoURI, "mongo-uri", lookupEnvOrString("MONGO_URI", config.MongoURI), "Endereço do mongoDB")
 	flag.StringVar(&config.StarWarsAPI, "star-wars-api", lookupEnvOrString("SW_API", config.StarWarsAPI), "Endereço da API do Star Wars")
 
-	repo, err := models.NewDB(config.MongoURI)
+	repo, err := models.NewRepository(config.MongoURI)
 	if err != nil {
 		panic(err)
 	}
 	defer repo.Disconnect()
-	router := mappings.CreateRouter(repo, config)
+	router := createRouter(repo, config)
 	router.Run(":8080")
 }
 
@@ -34,4 +44,43 @@ func lookupEnvOrString(key string, defaultVal string) string {
 		return val
 	}
 	return defaultVal
+}
+
+func createRouter(repo models.IRepository, config *controllers.AppConfig) *gin.Engine {
+	router := gin.New()
+	controller := controllers.NewController(repo, httpclient.NewBreaker(), config)
+	corsConfig := cors.DefaultConfig()
+	corsConfig.AllowOrigins = []string{"*"}
+
+	zerolog.SetGlobalLevel(zerolog.InfoLevel)
+	if gin.IsDebugging() {
+		zerolog.SetGlobalLevel(zerolog.DebugLevel)
+	}
+
+	log.Logger = log.Output(
+		zerolog.ConsoleWriter{
+			Out:     os.Stderr,
+			NoColor: false,
+		},
+	)
+
+	url := ginSwagger.URL(fmt.Sprintf("%s/swagger/doc.json", config.ServerHost))
+	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
+
+	router.Use(gin.Recovery())
+	router.Use(logger.SetLogger())
+	router.Use(cors.New(corsConfig))
+	pprof.Register(router)
+
+	api := router.Group("api")
+	v1 := api.Group("v1")
+	{
+		v1.GET("/", controller.Raiz)
+		v1.GET("/planetas/:id", controller.BuscaPlanetaPorID)
+		v1.GET("/planetas", controller.BuscaPlanetasPaginado)
+		v1.POST("/planetas", controller.InserirPlaneta)
+		v1.DELETE("/planetas/:id", controller.RemoverPlaneta)
+	}
+
+	return router
 }
